# flake-templates

./: LICENSE  README.md  flake.nix
python-script/: .gitignore  flake.nix  pyproject.toml  rename-from-template-to-folder-name.sh
python-script/src/: template.py
