# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "template"
authors = [
    # {name = "You", email = "you@you.com"},
]
description = "idk"
requires-python = ">=3.11"
dependencies = [
    "requests",
]
dynamic = ["version"]

[project.scripts]
template = "template:main"

[pytest]
testpaths = "./src"
